--- a/style_sheet.css
+++ b/style_sheet.css
@@ -54,3 +54,28 @@
   transition: max-height 0.2s ease-out;
   background-color: #f1f1f1;
 }
+ /* Navigation bar style */
+ .topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+ /* Please change the shade of blue to a nicer one :) */
+.topnav a.active {
+  background-color: #0027c2;
+  color: white;
+}
