--- a/style_sheet.css
+++ b/style_sheet.css
@@ -15,3 +15,25 @@
     color: white;
     font-size: 70px;
   }
+
+  h2 {
+    font-family: sans-serif;
+    font-size: 20px;
+    color:teal;
+    margin-left: 10px;
+  }
+
+  h2:hover {
+    font-family: sans-serif;
+    font-size: 35px;
+  }
+
+  p {
+    font-family: sans-serif;
+    margin-left: 15px;
+    margin-right: 10px;
+  }
+
+  a:link {
+    text-decoration: none;
+  }
