--- a/style_sheet.css
+++ b/style_sheet.css
@@ -20,14 +20,20 @@
 
   h2 {
     font-family: sans-serif;
-    font-size: 20px;
-    color:teal;
-    margin-left: 10px;
+    font-size: 20px; 
+	  position: relative;
+	  background:teal;
+	  border: 4px solid #fff;
+	  padding: 4px 15px;
+	  color: white;
+	  border-radius: 20px;
+    width: 700px;
   }
 
   h2:hover {
     font-family: sans-serif;
     font-size: 35px;
+    background:cadetblue;
   }
 
   p {
