--- a/style_sheet.css
+++ b/style_sheet.css
@@ -1,4 +1,46 @@
 /* Container holding the image and the text */
+.cool_photo {
+  position: relative;
+  width: 100%;
+}
+
+.profile_photo {
+  border-radius: 50%;
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.overlay {
+  position: absolute;
+  bottom: 100%;
+  left: 0;
+  right: 0;
+  background-color: #8bbbb8;
+  overflow: hidden;
+  width: 100%;
+  height: 0;
+  transition: .5s ease;
+}
+
+.cool_photo:hover .overlay {
+  border-radius: 50%;
+  opacity: 0.5;
+  bottom: 0;
+  height: 100%;
+}
+
+.text {
+  white-space: nowrap; 
+  color: white;
+  font-size: 20px;
+  position: absolute;
+  overflow: hidden;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+}
 
 /*textbox {
   margin: auto;
@@ -10,6 +52,7 @@
 .main_title {
   text-shadow: 0 0 10px rgb(0, 0, 0);
 }
+
 
 .reference1{
   position: absolute;
