--- a/style_sheet.css
+++ b/style_sheet.css
@@ -1,7 +1,7 @@
-/* Container holding the image and the text */
+/* Poniżej są obrazki z tekstem do about me */
 .cool_photo {
   position: relative;
-  width: 100%;
+  width: 30%;
 }
 
 .profile_photo {
@@ -16,7 +16,7 @@
   bottom: 100%;
   left: 0;
   right: 0;
-  background-color: #8bbbb8;
+  background-color: #58bdb6;
   overflow: hidden;
   width: 100%;
   height: 0;
@@ -25,7 +25,7 @@
 
 .cool_photo:hover .overlay {
   border-radius: 50%;
-  opacity: 0.5;
+  opacity: 0.9;
   bottom: 0;
   height: 100%;
 }
@@ -33,7 +33,7 @@
 .text {
   white-space: nowrap; 
   color: white;
-  font-size: 20px;
+  font-size: 15px;
   position: absolute;
   overflow: hidden;
   top: 50%;
@@ -41,6 +41,7 @@
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
 }
+/* Powyżej są obrazki z tekstem do about me */
 
 /*textbox {
   margin: auto;
