--- a/style_sheet.css
+++ b/style_sheet.css
@@ -1,3 +1,26 @@
+/* Poniżej jest guzik do scroll up */
+#myBtn {
+  display: none; /* Hidden by default */
+  position: fixed; /* Fixed/sticky position */
+  bottom: 10px; /* Place the button at the bottom of the page */
+  right: 10px; /* Place the button 30px from the right */
+  z-index: 99; /* Make sure it does not overlap */
+  border: none; /* Remove borders */
+  outline: none; /* Remove outline */
+  background-color: rgb(5, 83, 83); /* Set a background color */
+  color: white; /* Text color */
+  cursor: pointer; /* Add a mouse pointer on hover */
+  padding: 15px; /* Some padding */
+  border-radius: 20px; /* Rounded corners */
+  font-size: 20px; /* Increase font size */
+  font-family: 'Josefin Sans', sans-serif;
+}
+
+#myBtn:hover {
+  background-color: #555; /* Add a dark-grey background on hover */
+}
+/* Powyżej jest guzik do scroll up */
+
 /* Poniżej są obrazki z tekstem do about me */
 .cool_photo {
   position: relative;
@@ -16,7 +39,7 @@
   bottom: 100%;
   left: 0;
   right: 0;
-  background-color: #58bdb6;
+  background-color: rgb(5, 83, 83);
   overflow: hidden;
   width: 100%;
   height: 0;
