--- a/style_sheet.css
+++ b/style_sheet.css
@@ -1,3 +1,12 @@
+/*Poniżej collapsable z indexu*/
+#mainForm { 
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
+  
+}
+
 /* Poniżej jest guzik do scroll up */
 #myBtn {
   display: none; /* Hidden by default */
@@ -66,13 +75,20 @@
 }
 /* Powyżej są obrazki z tekstem do about me */
 
-/*textbox {
-  margin: auto;
-  position: absolute;
-  width: 50%;
-  border: 3px solid rgb(0, 0, 0);
-  padding: 10px;
-}*/
+#textbox {
+  width: 130px;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+  background-color: white;
+  background-image: url('https://www.google.com/url?sa=i&url=https%3A%2F%2Ficon-icons.com%2Ficon%2Fwrite%2F176713&psig=AOvVaw1kFp3rC7qn74HLMUrngSrL&ust=1647290139997000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCJjdjJX4w_YCFQAAAAAdAAAAABAF');
+  background-position: 10px 10px; 
+  background-repeat: no-repeat;
+  padding: 12px 20px 12px 40px;
+  transition: width 0.4s ease-in-out;
+}
+
 .main_title {
   text-shadow: 0 0 10px rgb(0, 0, 0);
 }
@@ -233,4 +249,18 @@ h1 {
 @media screen  and (max-width:768px){
   h2{font-size:2rem;
   }
+}
+
+/* DARK MODE */
+
+body {
+  padding: 25px;
+  background-color: white;
+  color: black;
+  font-size: 25px;
+}
+
+.dark-mode {
+  background-color: black;
+  color: white;
 }
