--- a/style_sheet.css
+++ b/style_sheet.css
@@ -263,7 +263,6 @@ h1 {
   color: black;  
 }
 
- /* Please change the shade of blue to a nicer one :) */
 .topnav a.active {
   background-color: #2c4747;
   color: white;
@@ -284,9 +283,7 @@ h1 {
   }
 }
 
-
 /* BUTTONS DESIGN */
-
 .radious {
   background-color: teal;
   color: white;
@@ -295,12 +292,10 @@ h1 {
   text-align: center;
   padding: 10px 20px;
 }
-
 /* BUTTONS DESIGN koniec */
 
 
 /* DARK MODE */
-
 .darkbutton {
   background-color: teal;
   color: white;
@@ -311,9 +306,6 @@ h1 {
   font-size: 17px;
   float: right;
 }
-
-/* DARK MODE */
-
 
 body {
   background-color: white;
@@ -338,11 +330,60 @@ body {
   color: white;
   border-radius: 12px;
 }
-
 /* DARK MODE koniec */
 
 /*textbox*/
 #textbox {
   width: 90%;
   height: 50vh;
+}
+
+/*Loading screen*/
+.spinner-wrapper{
+  width: 100%;
+  height: 100%;
+  background-color: #ffffff;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.spinner {
+  position: relative;
+  width: 8rem;
+  height: 8rem;
+  border-radius: 50%;
+}
+
+.spinner::before,
+.spinner:after{
+  content: "";
+  position: absolute;
+  border-radius: 50%;
+}
+
+.spinner:before {
+  width: 100%;
+  height: 100%;
+  background-image:linear-gradient(90deg, #124ee7 0%,#119684 100% );
+  animation: spin .5s infinite linear;
+  
+}
+.spinner:after {
+  width: 90%;
+  height: 90%;
+  background-color: #ffffff;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+@keyframes spin {
+  to {
+      transform: rotate(360deg);
+  }
 }
