centered text responsive

--- a/style_sheet.css
+++ b/style_sheet.css
@@ -164,6 +164,7 @@ div.pic4 {
     color: white;
     font-size: 70px;
     font-family: 'Josefin Sans', sans-serif;
+    margin:auto;
   }
 
 /* Ania */
