zdjęcia na dark modzie

--- a/style_sheet.css
+++ b/style_sheet.css
@@ -347,6 +347,9 @@ body {
   color: white;
   border-radius: 12px;
 }
+
+.dark-mode img {
+  filter: brightness(40%);}
 /* DARK MODE koniec */
 
 /*textbox*/
