--- a/style_sheet.css
+++ b/style_sheet.css
@@ -37,8 +37,11 @@
 
 .cool_photo {
   position: relative;
-  width: 70%;
+}
 
+.cool_photo img {
+  width: 500px;
+  height:500px;
 }
 
 .profile_photo {
@@ -84,7 +87,18 @@
   -ms-transform: translate(-50%, -50%);
 }
 
-div.pic1 {
+#photo_container {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  gap: 20px;
+}
+
+#photo_container > div {
+  margin: auto;
+}
+
+/* div.pic1 {
   float: left;
 }
 
@@ -98,7 +112,7 @@ div.pic3 {
 
 div.pic4 {
   float: right;
-}
+} */
 /* Powyżej są obrazki z tekstem do about me */
 
 
@@ -126,8 +140,8 @@ div.pic4 {
 
 .main_title {
   text-shadow: 0 0 10px rgb(0, 0, 0);
-  width: 100%;
-  max-width: 1200px;
+  /*width: 100%;
+  max-width: 1200px;*/
   margin:auto;
 
 }
@@ -286,7 +300,9 @@ h1 {
   background-color: #2c4747;
   color: white;
 }
-@media screen and (max-width:768px){
+
+/*RESPONSIVENESS*/
+/*@media screen and (max-width:768px){
   p{font-size:1.5em;
 } 
 }
@@ -315,8 +331,8 @@ h1 {
 }
 @media screen  and (min-width:550px){
   text{font-size:1.75rem;
-  }
-}
+  } 
+}*/
 /* BUTTONS DESIGN */
 .radious {
   background-color: teal;
