--- a/style_sheet.css
+++ b/style_sheet.css
@@ -473,15 +473,11 @@ body {
   color: white;
 }
 
-/*#score {
-  border: solid teal;
-  margin-left: 18cm;
-  height: 70px;
-  width: 150px;
-  background-color: teal;
-  border-radius: 25px;
-  text-align: center;
-  text-shadow: 0 0 5px #9fd3c7;
-  color: white;
-}*/
-  
+
+#myChart {
+  float: left;
+}
+
+#pieChart {
+  float: right;
+}
